<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:id="@+id/total_payment_container"
              xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center_vertical"
              android:orientation="vertical">

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/one_sale_margin_10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@string/android_pos_font_thin"
                android:text="@string/title_oneday_total_sales"/>

            <TextView
                android:id="@+id/oneDaySales"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@string/android_pos_font_light"
                android:gravity="right"
                android:textColor="@color/AndroidPosGreen"
                android:textSize="@dimen/one_day_sales_text_size"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@string/android_pos_font_thin"
                android:text="@string/currency_india"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/one_sale_margin_10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@string/android_pos_font_thin"
                android:text="@string/title_oneday_total_discount"/>

            <TextView
                android:id="@+id/oneDayDiscount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@string/android_pos_font_light"
                android:gravity="right"
                android:textColor="@color/AndroidPosGreen"
                android:textSize="@dimen/one_day_sales_text_size"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@string/android_pos_font_thin"
                android:text="@string/currency_india"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/one_sale_margin_10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@string/android_pos_font_thin"
                android:text="@string/title_oneday_total_profit"/>

            <TextView
                android:id="@+id/oneDayNetProfit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@string/android_pos_font_light"
                android:gravity="right"
                android:textColor="@color/AndroidPosGreen"
                android:textSize="@dimen/one_day_sales_text_size"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@string/android_pos_font_thin"
                android:text="@string/currency_india"/>
        </TableRow>

    </TableLayout>

</LinearLayout>